fix compount key with array indexing SERVER-279